cmake_minimum_required(VERSION 3.13)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode main.cpp TwoSum1.cpp utils.cpp AddTwoNumber2.cpp LongestPalindromicSubstring3.cpp ZigZagConversion.cpp ReverseInteger.cpp StringtoInteger.cpp PalindromeNumber.cpp RegularExpressionMatching.cpp ContainerWithMostWater.cpp IntegertoRoman.cpp RomantoInteger.cpp LongestCommonPrefix.cpp 3Sum.cpp 3SumClosest.cpp 4Sum.cpp LetterCombinationsofaPhoneNumber.cpp ValidParentheses.cpp MergeTwoSortedLists.cpp GenerateParentheses.cpp MergekSortedLists.cpp SwapNodesinPairs.cpp ReverseNodesink-Group.cpp RemoveDuplicatesfromSortedArray.cpp RemoveElement.cpp ImplementstrStr.cpp DivideTwoIntegers.cpp SubstringwithConcatenationofAllWords.cpp NextPermutation.cpp LongestValidParentheses.cpp SearchRotatedSortedArray.cpp FindFirstLastPositionElementSortedArray.cpp SearchInsertPosition.cpp ValidSudoku.cpp SudokuSolver.cpp ReverseList.cpp BinaryTree.cpp BurstBalloons.cpp "CoinChange.cpp" CountingBits.cpp TopKFrequentElements.cpp)